--- a/bkpprogrammer/src/bkp_app/CMakeLists.txt
+++ b/bkpprogrammer/src/bkp_app/CMakeLists.txt
@@ -33,13 +33,6 @@
 set(TARGET_NAME bkp_app)
 set(FCS_FILTER_DIR ${BASE_PATH}/../FCS/FCSFilter)
 
-if(DEFINED SPDM_SIM)
-    add_compile_definitions(SPDM_SIM="\""${SPDM_SIM}"\"")
-    include_directories(${BASE_PATH}/dependencies/spdmSim/inc)
-    include_directories(${FCS_FILTER_DIR}/test/mocks)
-    file(GLOB MOCK_FILES ${FCS_FILTER_DIR}/test/mocks/*.cpp ${FCS_FILTER_DIR}/test/mocks/sys/*.cpp)
-    set(CMAKE_BUILD_RPATH ${CMAKE_BUILD_RPATH}:${CMAKE_CURRENT_BINARY_DIR}/spdmSim${SPDM_SIM}/lib)
-endif()
 
 set(TARGET_FILE_PATH ${BASE_PATH}/build/${CMAKE_BUILD_TYPE})
 
@@ -50,17 +43,17 @@ include_directories(${FCS_FILTER_DIR}/include)
 file(GLOB SOURCE_FILES *.cpp)
 file(GLOB FCS_SOURCE_FILES ${FCS_FILTER_DIR}/src/*.cpp)
 add_executable(bkp_app ${SOURCE_FILES} ${FCS_SOURCE_FILES} ${MOCK_FILES})
-resolve_dependencies()
-get_platform_name(platform)
+
+
 if(NOT DEFINED DEPENDENCIES_PATH)
     set(DEPENDENCIES_PATH ${CMAKE_SOURCE_DIR}/dependencies)
 endif()
-set(OPENSSL_LIB_DIR ${DEPENDENCIES_PATH}/openssl_${OPENSSL_VERSION}_${platform}_${ARCH}/lib)
-set(OPENSSL_INCLUDE_DIR ${DEPENDENCIES_PATH}/openssl_${OPENSSL_VERSION}_${platform}_${ARCH}/include)
-set(LIBCURL_LIB_DIR ${DEPENDENCIES_PATH}/libcurl_${LIBCURL_VERSION}_${platform}_${ARCH}/lib)
-set(LIBCURL_INCLUDE_DIR ${DEPENDENCIES_PATH}/libcurl_${LIBCURL_VERSION}_${platform}_${ARCH}/include)
-set(BOOST_LIB_DIR ${DEPENDENCIES_PATH}/boost_${BOOST_VERSION}_${platform}_${ARCH}/lib)
-set(BOOST_INCLUDE_DIR ${DEPENDENCIES_PATH}/boost_${BOOST_VERSION}_${platform}_${ARCH}/include)
+set(OPENSSL_LIB_DIR ${DEPENDENCIES_PATH}/openssl/lib)
+set(OPENSSL_INCLUDE_DIR ${DEPENDENCIES_PATH}/openssl/include)
+set(LIBCURL_LIB_DIR ${DEPENDENCIES_PATH}/libcurl/lib)
+set(LIBCURL_INCLUDE_DIR ${DEPENDENCIES_PATH}/libcurl/include)
+set(BOOST_LIB_DIR ${DEPENDENCIES_PATH}/boost/lib)
+set(BOOST_INCLUDE_DIR ${DEPENDENCIES_PATH}/boost/include)
 
 target_include_directories(${TARGET_NAME} SYSTEM PRIVATE ${OPENSSL_INCLUDE_DIR} ${LIBCURL_INCLUDE_DIR} ${BOOST_INCLUDE_DIR})
 target_link_libraries(${TARGET_NAME} PRIVATE
@@ -79,13 +72,3 @@ add_custom_command(
         ${CMAKE_SOURCE_DIR}/src/bkp_app/bkp_options.txt
         ${CMAKE_CURRENT_BINARY_DIR}/bkp_options.txt)
 
-if(DEFINED SPDM_SIM)
-    add_custom_command(
-            TARGET ${TARGET_NAME} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_directory
-            ${BASE_PATH}/dependencies/spdmSim
-            ${CMAKE_CURRENT_BINARY_DIR}/spdmSim${SPDM_SIM}
-            COMMAND ${CMAKE_COMMAND} -E copy
-            bkp_app
-            bkp_app${SPDM_SIM})
-endif()
