--- a/bkps/src/integrationTest/resources/config/application.yml
+++ b/bkps/src/integrationTest/resources/config/application.yml
@@ -40,7 +40,7 @@ spring:
                         type: PKCS12
                     key:
                         password: donotchange
-                        alias: bkps
+                        alias: ${KEYSTORE_DUMMY_ALIAS:bkps}
 
 server:
     port: 10344
