--- a/bkps/build.gradle
+++ b/bkps/build.gradle
@@ -133,6 +133,10 @@ tasks.register('testReport', TestReport) {
 if (project.hasProperty('prod')) {
     println 'Applying prod configuration'
     apply from: rootProject.file('gradle/profile_prod.gradle')
+    apply from: rootProject.file('gradle/liquibase.gradle')
+} else if (project.hasProperty('aws')) {
+    println 'Applying aws configuration'
+    apply from: rootProject.file('gradle/liquibase.gradle')
 } else {
     apply from: rootProject.file('gradle/profile_dev.gradle')
 }
